@@ -1,3 +1,8 @@
+2012-10-29  Alan Modra  <amodra@gmail.com>
+
+        * sb.c (sb_check): Use __builtin_clzll when size_t is not the
+        same size as long.
+
 2012-07-27  Tristan Gingold  <gingold@adacore.com>
 
 	* NEWS: Add marker for 2.23.
